# dbt-run-configs

./: .gitignore  README.md  pyproject.toml
dbt_run_configs/: configs.py  dbt_cli_builder.py  dbt_run_config_template.yml  main.py
docs/assets/: dbt_local_dev_overview.drawio
tests/: test_dbt_cli_builder.py  test_dbt_run_config_user.yml
