[tool.poetry]
name = "dbt-run-configs"
version = "0.1.0"
description = ""
authors = ["Robert Li <robertwli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygit2 = "^1.10.0"
click = "^8.1.3"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
datamodel-code-generator = "^0.13.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hi = "dbt_run_configs.main:print_hi"